--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
     master
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    docker build -t akastyka/printsmile .
+    docker build -t akastyka/printsmile .;
     docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
     docker push akastyka/printsmile;
     fi
